<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.main.Dados2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:background="@color/color4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/editNponto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/color4"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintVertical_bias="0.053" />


<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="?android:attr/listDivider" />
        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
            android:layout_width="177dp"
            android:layout_height="164dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:layout_constraintVertical_bias="0.25" />

        <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:background="@drawable/caixatext"
            android:layout_marginTop="-210dp"
        android:scaleType="fitXY"
        app:layout_constraintVertical_bias="0.0" />


        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="-19dp"
                android:text="@string/testnota"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/txtAV"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:scaleType="fitXY"
                android:layout_marginStart="-150dp"
                android:layout_marginTop="25dp"
                android:drawableEnd="@drawable/sem_nada"
                android:textSize="36sp"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textavuser"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:layout_gravity="end"
                android:layout_marginStart="80dp"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txtMedAv"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:drawableStart="@drawable/star"
                android:drawableEnd="@drawable/sem_nada"
                android:layout_marginStart="-135dp"
                android:layout_marginTop="45dp"
                android:gravity="center"
                android:textColor="#000000"
                android:textColorLink="#00FF0000"
                android:textSize="36sp"
                app:layout_constraintVertical_bias="0.744" />

            <TextView
                android:id="@+id/quantAva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:layout_marginStart="-110dp"
                android:textColor="#000000"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintVertical_bias="0.0" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/textcodi"
            android:textColor="#000000"
            android:textSize="26sp"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/codAvaView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/texts"
            android:hint="@string/textembreve"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/color4"
            android:textColorHint="#FFFFFF"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textG"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"
            android:textColor="#000000"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/texts"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/color4"
            android:drawableStart="@drawable/ic_action_edite"
            android:drawableEnd="@drawable/sem_nada"
            android:text="@string/texteditei"
            android:textColor="#FFFFFF"
            app:layout_constraintVertical_bias="0.52" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/color4"
            android:layout_marginTop="100dp"
            android:background="@drawable/texts"
            android:drawableStart="@drawable/sem_nada"
            android:drawableEnd="@drawable/sem_nada"
            android:text="@string/sair"
            android:textColor="#FFFFFF"
            app:layout_constraintVertical_bias="1.0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            />

</LinearLayout>
</ScrollView>
</LinearLayout>